k8s/microservices/catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: dev
spec:
  selector:
    app: catalog-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9091
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service
  namespace: dev
  labels:
    app: catalog-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-service
  template:
    metadata:
      name: catalog-service
      labels:
        app: catalog-service
    spec:
      containers:
        - name: catalog-service
          image: catalog-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9091
              protocol: TCP
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"]
      restartPolicy: Always
