k8s/microservices/dispatcher-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dispatcher-service
  namespace: dev
spec:
  selector:
    app: dispatcher-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9003
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dispatcher-service
  namespace: dev
  labels:
    app: dispatcher-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dispatcher-service
  template:
    metadata:
      name: dispatcher-service
      labels:
        app: dispatcher-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "9003"
    spec:
      containers:
        - name: dispatcher-service
          image: dispatcher-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9003
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 9003
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 9003
            initialDelaySeconds: 20
            periodSeconds: 15
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 5"]
          volumeMounts:
            - mountPath: /workspace/config
              name: dispatcher-service-config
              readOnly: true
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "100m"
              ephemeral-storage: "50Mi"
      automountServiceAccountToken: false
      restartPolicy: Always

      volumes:
        - name: dispatcher-service-config
          configMap:
            name: dispatcher-service-config
