k8s/microservices/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: dev
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9092
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: dev
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      name: order-service
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: order-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9092
              protocol: TCP
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"]
      restartPolicy: Always
